# wasm-spjorts

./: : Sender<Communication>,  Cargo.toml  README.md  scorecard
firmware/: Cargo.toml
firmware/src/: main.rs
frontend/: connect_controller.html  game.html  index.html  sport.html  wssuite.html
frontend/style/: game.css  index.css
server/: Cargo.toml
server/src/: control.rs  lib.rs  main.rs  serve.rs  server.rs
server/src/control/: msg.rs
server/src/serve/: registry.rs  service.rs
server/src/server/: service.rs
wasm/bowling/: Cargo.toml
wasm/bowling/src/: lib.rs  setup.rs  turns.rs
wasm/bowling/src/setup/: ball.rs  pin.rs
wasm/cube/: Cargo.toml
wasm/cube/src/: lib.rs  main.rs
wasm/spjorts-core/: Cargo.toml
wasm/spjorts-core/src/: communication.rs  lib.rs
websocket-listen-tester/: Cargo.toml
websocket-listen-tester/src/: main.rs
websocket-tester/: Cargo.toml
websocket-tester/src/: main.rs
