[package]
name = "server"
edition = "2021"
version.workspace = true
authors.workspace = true
default-run = "server"

[dependencies]
futures = { version = "0.3.30", features = ["executor"] }
futures-util = { version = "0.3.30", features = ["tokio-io"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-tungstenite = "0.14.0"
hyper-util = { version = "0.1.7", features = ["tokio", "full"] }
serde = { version = "1.0.206", features = ["serde_derive"] }
serde_json = "1.0.125"
slotmap = "1.0.7"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = "0.23.1"

[lints]
workspace = true
