[package]
name = "websocket-tester"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
futures-util = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
server = {path = "../server"}
deku = "0.18.1"
rand = "0.8.5"

[lints]
workspace = true
